--- a/styles.css
+++ b/styles.css
@@ -346,6 +346,24 @@ p {
     padding: 18px 0 13px 18px;
 }
 
+.card-icon {
+    width: 27px;
+    height: 27px;
+    margin-right: 12px;
+}
+
+.gauge-icon {
+    width: 25px;
+    height: 25px;
+    margin-right: 14px;
+}
+
+.cash-icon {
+    width: 19px;
+    height: 13px;
+    margin-right: 16px;
+}
+
 .pc-tricon {
     width: 14px;
     height: 11.2px;
@@ -899,13 +917,15 @@ p {
         background-color: #F5FAFF;
         border-radius: 0px;
         margin-bottom: 0px;
+        padding-top: 27px;
+        padding-bottom: 27px;
     }
 
     .pc-subcontainer-1 {
         grid-template-columns: 1fr 1fr;
         margin-left: 30px;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin-top: 0px;
+        margin-bottom: 0px;
         border-radius: 0px;
     }
 
@@ -922,6 +942,25 @@ p {
         border: none;
         font-size: 14px;
         line-height: 22px;
+    }
+
+    .card-icon {
+        width: 24px;
+        height: 24px;
+        margin-right: 13px;
+    }
+
+    .gauge-icon {
+        width: 24px;
+        height: 24px;
+        margin-right: 12px;
+    }
+    
+    .cash-icon {
+        width: 18px;
+        height: 12px;
+        margin-right: 16px;
+        margin-left: 2px;
     }
 
     .pc-padding {
